--- a/ciscryp/src/Components/Layout/Layout.scss
+++ b/ciscryp/src/Components/Layout/Layout.scss
@@ -59,4 +59,13 @@ body.dark {
       }
     }
   }
+  #foot {
+    ul {
+      li {
+        a {
+          color: white !important;
+        }
+      }
+    }
+  }
 }
