--- a/ciscryp/src/Components/Layout/Navbar/Nav.scss
+++ b/ciscryp/src/Components/Layout/Navbar/Nav.scss
@@ -6,41 +6,127 @@
 }
 
 #nav {
-  .left_Side {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    img {
-      object-fit: contain;
-      cursor: pointer;
-    }
-    .mb-3 {
-      width: 56%;
-      margin: 0 !important;
-      padding: 0px !important;
-      .form-control {
-        border-radius: 14px;
-        padding: 9px;
+  .nav_1 {
+    .left_Side {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      img {
+        object-fit: contain;
+        cursor: pointer;
       }
-      #button-addon1 {
-        margin: 0 -43px;
-        z-index: 7;
-        border: transparent;
-        border-radius: 22px;
-        &:hover {
-          background-color: transparent;
-          color: black;
+      .mb-3 {
+        width: 56%;
+        margin: 0 !important;
+        padding: 0px !important;
+        .form-control {
+          border-radius: 14px;
+          padding: 9px;
+        }
+        #button-addon1 {
+          margin: 0 -43px;
+          z-index: 7;
+          border: transparent;
+          border-radius: 22px;
+          &:hover {
+            background-color: transparent;
+            color: black;
+          }
         }
       }
     }
-  }
-  .right_side {
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    gap: 15px;
+    .right_side {
+      display: flex;
+      align-items: center;
+      justify-content: end;
+      gap: 15px;
 
+      ul {
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        gap: 15px;
+        list-style-type: none;
+        margin: 0px;
+        padding: 0px;
+
+        #discover {
+          background-color: rgba(189, 189, 189, 0.404);
+          color: black;
+          border-radius: 20px;
+        }
+        li {
+          cursor: pointer;
+          padding: 10px 15px;
+          color: rgb(22, 22, 22);
+          transition: 0.2s ease-in-out;
+          border-radius: 20px;
+
+          &:hover {
+            background-color: rgba(189, 189, 189, 0.404);
+            color: black;
+            border-radius: 20px;
+          }
+        }
+        &::after {
+          content: "";
+          position: absolute;
+          height: 33px;
+          background-color: rgba(45, 45, 45, 0.4);
+          width: 1px;
+          right: -5px;
+          top: 7px;
+        }
+      }
+      img {
+        width: 36px;
+        height: 36px;
+        object-fit: cover;
+        border-radius: 18px;
+        margin-left: 10px;
+        cursor: pointer;
+      }
+    }
+    @media (max-width: 1000px) {
+      display: none;
+    }
+  }
+
+  .nav_mobile {
+    display: none;
+    .left_Side {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      img {
+        object-fit: contain;
+        cursor: pointer;
+      }
+      .mb-3 {
+        width: 51%;
+        margin: 0 !important;
+        padding: 0px !important;
+        .form-control {
+          border-radius: 14px;
+          padding: 9px;
+        }
+        #button-addon1 {
+          margin: 0 -43px;
+          z-index: 7;
+          border: transparent;
+          border-radius: 22px;
+          &:hover {
+            background-color: transparent;
+            color: black;
+          }
+        }
+        @media (max-width: 647px) {
+          display: none;
+        }
+      }
+    }
     ul {
+      align-items: center;
       position: relative;
       display: flex;
       flex-direction: row;
@@ -48,45 +134,69 @@
       list-style-type: none;
       margin: 0px;
       padding: 0px;
+      justify-content: end;
 
-      #discover {
-        background-color: rgba(189, 189, 189, 0.404);
-        color: black;
-        border-radius: 20px;
-      }
       li {
         cursor: pointer;
         padding: 10px 15px;
-        color: rgb(22, 22, 22);
+        color: white;
+        background-color: rgb(64, 64, 248);
         transition: 0.2s ease-in-out;
         border-radius: 20px;
-
-        &:hover {
-          background-color: rgba(189, 189, 189, 0.404);
-          color: black;
-          border-radius: 20px;
-        }
-      }
-      &::after {
-        content: "";
-        position: absolute;
-        height: 33px;
-        background-color: rgba(45, 45, 45, 0.4);
-        width: 1px;
-        right: -5px;
-        top: 7px;
       }
     }
-    img {
-      width: 36px;
-      height: 36px;
-      object-fit: cover;
-      border-radius: 18px;
-      margin-left: 10px;
-      cursor: pointer;
+
+    @media (max-width: 1000px) {
+      display: block;
     }
   }
-  @media (max-width: 1000px) {
-    display: none;
+}
+.offcanvas {
+  .offcanvas-body {
+    .body_canvas {
+      justify-content: baseline;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      span {
+        color: rgb(104, 104, 104);
+        font-size: 14px;
+      }
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 18px;
+        margin: 0px;
+        padding: 0px;
+        list-style-type: none;
+        li {
+          color: black;
+          cursor: pointer;
+          list-style: none;
+          font-size: 14px;
+        }
+      }
+      #create {
+        text-decoration: none;
+
+        padding: 10px;
+        color: white;
+        background-color: blue;
+        border-radius: 25px;
+        display: block !important;
+        text-align: center;
+      }
+
+      #connect {
+        text-decoration: none;
+        display: block;
+        padding: 10px;
+        color: black;
+        border-radius: 25px;
+        display: block !important;
+        text-align: center;
+        border: 1px solid rgb(194, 194, 194);
+      }
+    }
   }
 }
