--- a/ciscryp/src/Components/Home/Section1/Discover.scss
+++ b/ciscryp/src/Components/Home/Section1/Discover.scss
@@ -9,12 +9,27 @@
     span {
       font-size: 45px;
       font-weight: 500;
+      @media (max-width: 900px) {
+        font-size: 37px;
+      }
+      @media (max-width: 600px) {
+        font-size: 31px;
+      }
     }
 
     p {
       margin: 40px 0;
       width: 73%;
       color: #616161;
+      @media (max-width: 900px) {
+        width: 70%;
+
+        font-size: 14px;
+      }
+      @media (max-width: 600px) {
+        width: 61%;
+        font-size: 13px;
+      }
     }
     .sec1_click {
       display: flex;
