--- a/ciscryp/src/Components/Home/Section3/Searching.scss
+++ b/ciscryp/src/Components/Home/Section3/Searching.scss
@@ -5,11 +5,20 @@
   h3 {
     font-size: 41px;
     font-weight: 600;
+    @media (max-width: 900px) {
+      font-size: 37px;
+    }
+    @media (max-width: 700px) {
+      font-size: 32px;
+    }
   }
   p {
     color: #3a3a3a;
     margin: 16px 0;
     font-size: 17px;
+    @media (max-width: 500px) {
+      font-size: 13px;
+    }
   }
 
   ul {
@@ -25,6 +34,15 @@
       padding: 15px 15px;
       border-radius: 30px;
       color: black;
+      @media (max-width: 1000px) {
+        margin-bottom: 10px;
+      }
+      @media (max-width: 800px) {
+        padding: 10px 12px;
+      }
+      @media (max-width: 510px) {
+        display: none;
+      }
     }
     .active {
       background-color: rgba(25, 25, 225, 0.338);
@@ -44,6 +62,9 @@
       &:hover {
         background-color: rgb(0, 0, 255);
       }
+      @media (max-width: 600px) {
+        padding: 10px 40px;
+      }
     }
     .mb-3 {
       width: 55%;
@@ -62,6 +83,12 @@
           background-color: transparent;
           color: black;
         }
+      }
+      @media (max-width: 500px) {
+        width: 50%;
+      }
+      @media (max-width: 350px) {
+        width: 42%;
       }
     }
   }
