--- a/ciscryp/src/Components/Home/Section4/Premium.scss
+++ b/ciscryp/src/Components/Home/Section4/Premium.scss
@@ -11,10 +11,22 @@
       font-size: 36px;
       font-weight: 600;
       margin: 10px 0;
+      @media (max-width: 700px) {
+        font-size: 32px;
+      }
+      @media (max-width: 500px) {
+        font-size: 28px;
+      }
     }
     p {
       color: rgb(161, 161, 161);
       margin: 30px 0 35px 0;
+      @media (max-width: 700px) {
+        font-size: 15px;
+      }
+      @media (max-width: 500px) {
+        font-size: 14px;
+      }
     }
     ul {
       list-style-type: none;
