--- a/ciscryp/src/Components/Home/Section5/Creators.scss
+++ b/ciscryp/src/Components/Home/Section5/Creators.scss
@@ -15,9 +15,19 @@
         color: green;
         font-size: 40px;
       }
+      @media (max-width: 1000px) {
+        font-size: 35px !important;
+      }
+      @media (max-width: 800px) {
+        font-size: 30px !important;
+      }
+      @media (max-width: 400px) {
+        font-size: 25px !important;
+      }
     }
   }
   .sec3_cart {
+    overflow: hidden;
     transition: 0.2s ease-in-out;
     padding: 30px 2px;
     cursor: pointer;
@@ -104,6 +114,9 @@
           &:hover {
             background-color: rgb(30, 30, 236);
           }
+          @media (max-width: 1200px) {
+            padding: 8px 20px;
+          }
         }
       }
     }
@@ -112,6 +125,9 @@
       color: #4b4b4b;
       padding: 0 17px;
       margin: 20px 0;
+      @media (max-width: 1200px) {
+        font-size: 11px;
+      }
     }
     &:hover {
       box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
