--- a/ciscryp/src/Components/Home/Section6/SwiperCollect.scss
+++ b/ciscryp/src/Components/Home/Section6/SwiperCollect.scss
@@ -24,6 +24,9 @@
     &:after {
       font-size: 18px;
     }
+    @media (max-width: 550px) {
+      display: none;
+    }
   }
   .swiper-button-prev {
     color: grey;
@@ -32,6 +35,12 @@
 
     &:after {
       font-size: 18px;
+    }
+    @media (max-width: 1400px) {
+      left: 86%;
+    }
+    @media (max-width: 550px) {
+      display: none;
     }
   }
 
